commit desde prueba

--- a/hola2.ipynb
+++ b/hola2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9b626e58",
    "metadata": {},
    "outputs": [
@@ -18,13 +18,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola, mundo2!\n"
+      "Prueba 2!\n"
      ]
     }
    ],
    "source": [
     "def saludar():\n",
-    "    print(\"Hola, mundo2!\")\n",
+    "    print(\"Prueba 2!\")\n",
     "\n",
     "\n",
     "# Llamamos a la función\n",
